2003-05-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-fun.el (gnus-display-x-face-in-from): Don't use centering
	since none of the other image things do.

2003-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (assq-delete-all): New compiler macro for Emacs 20.

2003-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind find-coding-system.

	* dgnushack.el (dgnushack-make-load): Remove redundant format call
	in message.  Suggested by Yoichi NAKAYAMA <yoichi@geiin.org>.
	* pop3.el (pop3-movemail): Ditto.

2003-05-12  Colin Marquardt <c.marquardt@alcatel.de>  (tiny change)

	* gnus.el (gnus-agent): Docstring fix.

2003-05-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install): new variable
	(gnus-registry-fetch-extra, gnus-registry-fetch-extra-entry) 
	(gnus-registry-store-extra-entry, gnus-registry-delete-group) 
	(gnus-registry-add-group): add a modification timestamp to each entry
	(gnus-registry-install-hooks): new function

2003-05-12  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-cat-name): Eval macro while compiling.
	(gnus-agent-cat-disable-undownloaded-faces): New function.
	Accessor for new agent property
	'agent-disable-undownloaded-faces'.
	gnus-cus.el (gnus-agent-parameters): Added
	agent-disable-undownloaded-faces and corrected documentation.
	(gnus-agent-cat-prepare-category-field,
	gnus-agent-customize-category): Changed to avoid creating free
	references to each field's symbol.
	gnus-sum.el (gnus-summary-use-undownloaded-faces): New local variable.
	(gnus-select-newgroup): Initialize it.
	(gnus-summary-highlight-line): Use it.	

2003-05-12  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-point-at-bol, rfc2047-point-at-bol): Eval
	and compile.
	(rfc2047-syntax-table): Fix building table to work in Emacs 22.
	(rfc2047-unfold-region): Delete unused var `leading'.

2003-05-12  Simon Josefsson  <jas@extundo.com>
